--- a/index.Rmd
+++ b/index.Rmd
@@ -80,7 +80,8 @@ library(thesisdown)
 ```
 
 ```{r chunkopts, include=FALSE}
-knitr::opts_chunk$set(echo=FALSE, warning=FALSE, message=FALSE, fig.align='center', 
+knitr::opts_chunk$set(echo=FALSE, warning=FALSE, message=FALSE, 
+                      fig.align='center', dpi = 200,
                       dev.args=list(bg="transparent"), dev='png') #, dev='pdf'
 options(knitr.kable.NA = '')
 library(pROC)
